<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:layout_marginTop="56dp"
                                                 tools:context=".fragments.MemeDetailFragment"
    >

        <TextView
                android:text="Comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/text_detail_thecomments"
                app:layout_constraintTop_toBottomOf="@+id/text_detail_beschrijving"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="40dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:id="@+id/text_detail_categorie"
                app:layout_constraintStart_toEndOf="@+id/text_detail_op"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/text_detail_op"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:id="@+id/text_detail_op"
                app:layout_constraintTop_toBottomOf="@id/comment_list"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:id="@+id/text_detail_beschrijving"
                app:layout_constraintTop_toBottomOf="@+id/image_detail_afbeelding"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="28dp"
                android:textAlignment="center"
                android:id="@+id/text_detail_titel"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <ImageView
                android:id="@+id/image_detail_afbeelding"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="Afbeelding van meme"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintTop_toBottomOf="@+id/text_detail_titel"
                android:layout_marginTop="16dp" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:context=".MainActivity"
                tools:listitem="@layout/fragment_comment"
                app:layout_constraintTop_toBottomOf="@+id/card_comment"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:cardCornerRadius="6dp"
                                            app:cardElevation="6dp" android:id="@+id/card_comment"
                                            app:layout_constraintTop_toBottomOf="@+id/text_detail_thecomments"
                                            app:layout_constraintStart_toStartOf="parent"
                                            android:layout_marginStart="8dp"
                                            android:layout_marginTop="8dp">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                         xmlns:app="http://schemas.android.com/apk/res-auto"
                                                         xmlns:tools="http://schemas.android.com/tools"
                                                         android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
            >

                <Button
                        android:text="Place Comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_detail_commentSubmit"
                        app:layout_constraintStart_toEndOf="@+id/tekst_detail_commentTekst"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:hint="Username"
                        android:id="@+id/tekst_detail_commentOp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:inputType="textPersonName"
                        android:hint="Comment"
                        android:ems="10"
                        android:id="@+id/tekst_detail_commentTekst"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tekst_detail_commentOp"

                        android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    </ScrollView>
