<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:layout_marginTop="56dp"
                                             tools:context=".fragments.MemeAddFragment" >

    <!-- TODO: Update blank fragment layout -->
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/spinner_add_categorie"
            app:layout_constraintTop_toBottomOf="@+id/text_add_beschrijving"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="125dp"
            android:height="50dp"
            android:id="@+id/button_add_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/spinner_add_categorie"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Meme description"
            android:ems="10"
            android:id="@+id/text_add_beschrijving" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_add_afbeelding" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Meme image link"
            android:ems="10"
            android:id="@+id/text_add_afbeelding" app:layout_constraintTop_toBottomOf="@+id/text_add_titel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Meme title"
            android:ems="10"
            android:id="@+id/text_add_titel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_add_op"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Your username"
            android:ems="10"
            android:id="@+id/text_add_op" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_add_opgave" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="Add your meme!"
            android:id="@+id/text_add_opgave" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />

</android.support.constraint.ConstraintLayout>