<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity"
      tools:ignore="MissingDefaultResource">

    <item android:id="@+id/action_sort"

          app:actionViewClass="android.widget.Spinner"
          app:showAsAction="always" android:title="Choose category"/>
    <!--<item android:id="@+id/action_home"
          android:icon="@drawable/baseline_list_black_48dp"
          android:title="@string/zoeken"

          app:showAsAction="ifRoom"/>-->

    <item

            android:id="@+id/action_add"
            android:icon="@drawable/baseline_add_black_18dp"
            android:title="@string/add"
            app:showAsAction="ifRoom"/>


</menu>