<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_meme_list"
        android:name="com.example.anthonyvannoppen.androidproject.fragments.MemeListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="56dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:context=".MainActivity"
        tools:listitem="@layout/fragment_meme"/>
